# configure

./: .gitmodules  README.md  Software.md  agent_global_rule.md  alacritty.toml  alacritty.yml  config.fish  gdbinit-fixed  gitconfig  gitignore_global  mysh.sh  setup  starship.toml  start.py  tmux.conf  update  wezterm.lua  zshrc
demos/: toml_parser.cpp
demos/cmake_demo/: .gitignore  CMakeLists.txt
demos/cmake_demo/src/: main.cpp
demos/cmake_demo/validation/: test_hello.cpp  test_hello.py
demos/cpp_demo/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
demos/cpp_demo/fmt/: CMakeLists.txt
demos/cpp_demo/include/: foo.h
demos/cpp_demo/src/: foo.cpp  foo.py  main.cpp  pyModuleCFFI.py  setup_cffimodule.py  test_cffimodule.py
demos/cpp_demo/validation/: test_hello.cpp
emacs.d/: init.el
emacs.d/appearance/: custom.el
emacs.d/core_enhance/: global.el
emacs.d/editing/: format.el  lsp.el  rainbow.el  snip.el
emacs.d/lisp/appearance/: custom.el  modeline.el
emacs.d/lisp/core_enhance/: global.el  search.el
emacs.d/lisp/editing/: completion.el  format.el  tree.el  vimode.el
emacs.d/lisp/keymaps/: keys.el
emacs.d/lisp/org/: org-config.el
format/: clang-format  pyproject.toml  rustfmt.toml
nvim/: init.lua
nvim/lua/: README.md
nvim/lua/config/: lazy.lua  options.lua
nvim/lua/plugins/: init.lua
software/: alacritty.toml  gitconfig  gitignore_global  starship.toml  start.py  vimrc  wezterm.lua  zshrc
software/emacs.d/: custom_spacemacs  init.el  spacemacs
software/emacs.d/lisp/appearance/: custom.el  minibuffer.el  startup.el
software/emacs.d/lisp/core_enhance/: global.el  window.el
software/emacs.d/lisp/editing/: indent.el  lastplace.el  syntax.el  vimode.el
software/emacs.d/lisp/org/: org-config.el
software/format/: clang-format  pyproject.toml
vim/: vimrc
